--- a/PrivacyPolicy.html
+++ b/PrivacyPolicy.html
@@ -6,7 +6,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="ko" lang="ko">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-<meta property="og:image" content="http://img.jpg"/>
+<meta property="og:image" content="https://play-lh.googleusercontent.com/4Wu8nxA6li-yU4EQOgj4aaAR_Rximj_yVwWo2lt1KQBKEQPqD536uoHb68cjfED9Exo=s48-rw"/>
 
 <title>개인정보처리방침</title>
 </head>
