--- a/PrivacyPolicy.html
+++ b/PrivacyPolicy.html
@@ -5,6 +5,13 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="ko" lang="ko">
 <head>
+	<meta property="og:title" content="Title of your website | website.com"/>
+	<meta property="og:type" content="Most popular business directory of Bangladesh"/>
+	<meta property="og:url" content="http://www.website.com/"/>
+	<meta property="og:image" content="http://www.website.com/images/dhaka-city.jpg"/>
+	<meta property="og:site_name" content="@website"/>
+	<meta property="fb:admins" content="Author"/>
+	<meta property="og:description" content="website.com is your online business directory of Country"/>
 <title>개인정보처리방침</title>
 </head>
 <body>
