--- a/PrivacyPolicy.html
+++ b/PrivacyPolicy.html
@@ -6,9 +6,9 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="ko" lang="ko">
 <head>
 	<meta property="fb:app_id" content="409425824531580"/>
-	<meta property="og:title" content="Title of your website | website.com"/>
-	<meta property="og:type" content="Most popular business directory of Bangladesh"/>
-	<meta property="og:url" content="http://www.website.com/"/>
+	<meta property="og:title" content="Mosquito.io"/>
+	<meta property="og:type" content="Game"/>
+	<meta property="og:url" content="https://play.google.com/store/apps/details?id=com.Jamplus.Mosquito.io&hl=ko&gl=US"/>
 	<meta property="og:image" content="https://play-lh.googleusercontent.com/7Gw_Ife0hdeZ0NeGOuCLpCGcLecsyTrDaHZcCojAmWLVAZf4gt9x9l6Jc5F2N0dWjTfC=w526-h296-rw"/>
 	<meta property="og:site_name" content="@website"/>
 	<meta property="fb:admins" content="Author"/>
