--- a/PrivacyPolicy.html
+++ b/PrivacyPolicy.html
@@ -10,9 +10,8 @@
 	<meta property="og:type" content="Game"/>
 	<meta property="og:url" content="https://play.google.com/store/apps/details?id=com.Jamplus.Mosquito.io&hl=ko&gl=US"/>
 	<meta property="og:image" content="https://play-lh.googleusercontent.com/7Gw_Ife0hdeZ0NeGOuCLpCGcLecsyTrDaHZcCojAmWLVAZf4gt9x9l6Jc5F2N0dWjTfC=w526-h296-rw"/>
-	<meta property="og:site_name" content="@website"/>
 	<meta property="fb:admins" content="Author"/>
-	<meta property="og:description" content="website.com is your online business directory of Country"/>
+	<meta property="og:description" content="Become a mosquito and suck the blood of other mosquitoes!"/>
 <title>개인정보처리방침</title>
 </head>
 <body>
